// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RangeSlider /> Snapshots should match the snapshot when <RangeSlider /> is disabled 1`] = `
<RangeSliderWrapper
  theme={
    Object {
      "baseFontSize": 16,
      "colors": Object {
        "error": Object {
          "100": "#ffe5e9",
          "300": "#f88e86",
          "500": "#ec584e",
          "700": "#e91b0c",
          "900": "#ac001a",
        },
        "neutral": Object {
          "0": "#ffffff",
          "100": "#f2f2f2",
          "1000": "#000000",
          "300": "#e0e0e0",
          "500": "#999999",
          "700": "#424242",
          "900": "#191919",
        },
        "primary": Object {
          "100": "#E5EDFC",
          "300": "#89AAE7",
          "500": "#0CC0EA",
          "700": "#1250C4",
          "900": "#002F7B",
        },
        "secondary": Object {
          "100": "#F7B0C8",
          "300": "#F278A1",
          "500": "#E91E63",
          "700": "#DE0059",
          "900": "#9E003F",
        },
        "success": Object {
          "100": "#dcedc8",
          "300": "#c9eda2",
          "500": "#7ed321",
          "700": "#3b610f",
          "900": "#004D40",
        },
        "warning": Object {
          "100": "#ffefd6",
          "300": "#ffda6a",
          "500": "#ffc107",
          "700": "#f09100",
          "900": "#d14900",
        },
      },
      "spacing": Object {
        "large": 24,
        "medium": 16,
        "small": 12,
        "xlarge": 32,
        "xsmall": 8,
        "xxlarge": 40,
        "xxsmall": 4,
        "xxxlarge": 48,
        "xxxsmall": 2,
      },
    }
  }
>
  <SliderComponent
    defaultValue={30}
    disabled={true}
    getAriaLabel={[Function]}
    getAriaValueText={[Function]}
    max={100}
    min={0}
    onChange={[Function]}
    onChangeCommitted={[Function]}
    step={1}
    track="normal"
    valueLabelDisplay="auto"
    valueLabelFormat={[Function]}
  />
</RangeSliderWrapper>
`;

exports[`<RangeSlider /> Snapshots should match the snapshot when have just one handle 1`] = `
<RangeSliderWrapper
  theme={
    Object {
      "baseFontSize": 16,
      "colors": Object {
        "error": Object {
          "100": "#ffe5e9",
          "300": "#f88e86",
          "500": "#ec584e",
          "700": "#e91b0c",
          "900": "#ac001a",
        },
        "neutral": Object {
          "0": "#ffffff",
          "100": "#f2f2f2",
          "1000": "#000000",
          "300": "#e0e0e0",
          "500": "#999999",
          "700": "#424242",
          "900": "#191919",
        },
        "primary": Object {
          "100": "#E5EDFC",
          "300": "#89AAE7",
          "500": "#0CC0EA",
          "700": "#1250C4",
          "900": "#002F7B",
        },
        "secondary": Object {
          "100": "#F7B0C8",
          "300": "#F278A1",
          "500": "#E91E63",
          "700": "#DE0059",
          "900": "#9E003F",
        },
        "success": Object {
          "100": "#dcedc8",
          "300": "#c9eda2",
          "500": "#7ed321",
          "700": "#3b610f",
          "900": "#004D40",
        },
        "warning": Object {
          "100": "#ffefd6",
          "300": "#ffda6a",
          "500": "#ffc107",
          "700": "#f09100",
          "900": "#d14900",
        },
      },
      "spacing": Object {
        "large": 24,
        "medium": 16,
        "small": 12,
        "xlarge": 32,
        "xsmall": 8,
        "xxlarge": 40,
        "xxsmall": 4,
        "xxxlarge": 48,
        "xxxsmall": 2,
      },
    }
  }
>
  <SliderComponent
    defaultValue={30}
    disabled={false}
    getAriaLabel={[Function]}
    getAriaValueText={[Function]}
    max={100}
    min={0}
    onChange={[Function]}
    onChangeCommitted={[Function]}
    step={1}
    track="normal"
    value={10}
    valueLabelDisplay="auto"
    valueLabelFormat={[Function]}
  />
</RangeSliderWrapper>
`;

exports[`<RangeSlider /> Snapshots should match the snapshot when have two handles 1`] = `
<RangeSliderWrapper
  theme={
    Object {
      "baseFontSize": 16,
      "colors": Object {
        "error": Object {
          "100": "#ffe5e9",
          "300": "#f88e86",
          "500": "#ec584e",
          "700": "#e91b0c",
          "900": "#ac001a",
        },
        "neutral": Object {
          "0": "#ffffff",
          "100": "#f2f2f2",
          "1000": "#000000",
          "300": "#e0e0e0",
          "500": "#999999",
          "700": "#424242",
          "900": "#191919",
        },
        "primary": Object {
          "100": "#E5EDFC",
          "300": "#89AAE7",
          "500": "#0CC0EA",
          "700": "#1250C4",
          "900": "#002F7B",
        },
        "secondary": Object {
          "100": "#F7B0C8",
          "300": "#F278A1",
          "500": "#E91E63",
          "700": "#DE0059",
          "900": "#9E003F",
        },
        "success": Object {
          "100": "#dcedc8",
          "300": "#c9eda2",
          "500": "#7ed321",
          "700": "#3b610f",
          "900": "#004D40",
        },
        "warning": Object {
          "100": "#ffefd6",
          "300": "#ffda6a",
          "500": "#ffc107",
          "700": "#f09100",
          "900": "#d14900",
        },
      },
      "spacing": Object {
        "large": 24,
        "medium": 16,
        "small": 12,
        "xlarge": 32,
        "xsmall": 8,
        "xxlarge": 40,
        "xxsmall": 4,
        "xxxlarge": 48,
        "xxxsmall": 2,
      },
    }
  }
>
  <SliderComponent
    defaultValue={30}
    disabled={false}
    getAriaLabel={[Function]}
    getAriaValueText={[Function]}
    max={100}
    min={0}
    onChange={[Function]}
    onChangeCommitted={[Function]}
    step={1}
    track="normal"
    value={
      Array [
        10,
        30,
      ]
    }
    valueLabelDisplay="auto"
    valueLabelFormat={[Function]}
  />
</RangeSliderWrapper>
`;
